--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "version": "1.0.0",
   "description": "a testing intro",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.1.0"
+  }
 }
