--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a testing intro",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.1.0"
   }
